<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="menuVM" type="com.ecom.app.modules.menu.data.viewmodel.MenuVM"/>
    </data>
    <LinearLayout android:id="@+id/linearMenu"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_300_01">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarAppbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <ImageView android:id="@+id/imageRectangle"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_rectangle_50x50}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle_50x50"/>
            <LinearLayout android:id="@+id/linearGroup4"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMildredBennett"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{menuVM.menuModel.txtMildredBennett}"
                    style="@style/txtPlayfairDisplayromanbold16_1" tools:text="@string/lbl_mildred_bennett"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEmail"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{menuVM.menuModel.txtEmail}"
                    style="@style/txtPlayfairDisplayitalicregular12" tools:text="@string/lbl_user_gmail_com"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageClose"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_close"
                tools:ignore="ContentDescription" tools:src="@drawable/img_close"/>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumndiscover"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_37pxh"
            android:paddingStart="@dimen/_37pxh" android:paddingTop="@dimen/_20pxv">
            <TextView android:ellipsize="end"
                android:id="@+id/txtDiscover"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{menuVM.menuModel.txtDiscover}"
                style="@style/txtPlayfairDisplayitalicregular22" tools:text="@string/lbl_discover"/>
            <TextView android:ellipsize="end" android:id="@+id/txtShop"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{menuVM.menuModel.txtShop}"
                style="@style/txtPlayfairDisplayitalicregular22" tools:text="@string/lbl_shop"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtFavorites"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{menuVM.menuModel.txtFavorites}"
                style="@style/txtPlayfairDisplayitalicregular22_1" tools:text="@string/lbl_favorites"/>
            <TextView android:ellipsize="end" android:id="@+id/txtInbox"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{menuVM.menuModel.txtInbox}"
                style="@style/txtPlayfairDisplayitalicregular22" tools:text="@string/lbl_inbox"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAskanExpert"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{menuVM.menuModel.txtAskanExpert}"
                style="@style/txtPlayfairDisplayitalicregular22" tools:text="@string/lbl_ask_an_expert"/>
            <View android:background="@color/gray_600_02"
                android:id="@+id/lineLineThree"
                android:layout_height="@dimen/_1pxv" android:layout_width="@dimen/_137pxh"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtSettings"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{menuVM.menuModel.txtSettings}"
                style="@style/txtPlayfairDisplayitalicregular22" tools:text="@string/lbl_settings"/>
            <FrameLayout android:id="@+id/frameGroup807"
                android:layout_height="wrap_content" android:layout_width="match_parent"/>
            <ImageView android:id="@+id/imageArrowright"
                android:layout_height="@dimen/_43pxh"
                android:layout_width="@dimen/_70pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowright"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLogout"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{menuVM.menuModel.txtLogout}"
                style="@style/txtPlayfairDisplayitalicregular22_1" tools:text="@string/lbl_log_out"/>
        </LinearLayout>
    </LinearLayout>
</layout>
