<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="myorderRowModel" type="com.ecom.app.modules.myorder.data.model.MyorderRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowrectangleten"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageRectangleTen"
            android:layout_gravity="center_vertical"
            android:layout_height="@dimen/_203pxh"
            android:layout_width="@dimen/_150pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_30pxh}"
            imageRes="@{@drawable/img_rectangle10_237x175_1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle10_237x175_1"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnvertluneboyfriend"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:orientation="vertical">
            <TextView android:id="@+id/txtVERTLUNEBoyfriend"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:text="@{myorderRowModel.txtVERTLUNEBoyfriend}"
                style="@style/txtPlayfairDisplayplayfairdisplaymedium16_4" tools:text="@string/msg_vertlune_boyfri"/>
            <TextView android:id="@+id/txtYellowsizeCounter"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:text="@{myorderRowModel.txtYellowsizeCounter}"
                style="@style/txtPlayfairDisplayromanbold12" tools:text="@string/lbl_yellow_size_8"/>
            <LinearLayout android:id="@+id/linearRowprice"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPrice"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{myorderRowModel.txtPrice}"
                    style="@style/txtPlayfairDisplayplayfairdisplaymedium28" tools:text="@string/lbl_58"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt1x"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{myorderRowModel.txt1x}"
                    style="@style/txtPlayfairDisplayplayfairdisplaymedium36_2" tools:text="@string/lbl_1x"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
