<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="productVM" type="com.ecom.app.modules.product.data.viewmodel.ProductVM"/>
    </data>
    <LinearLayout android:id="@+id/linearProduct"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_300_01">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarAppbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <ImageView android:id="@+id/imageArrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_group36"
                tools:ignore="ContentDescription" tools:src="@drawable/img_group36"/>
            <LinearLayout android:id="@+id/linearGroup16"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageSearch"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_search_blue_gray_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_search_blue_gray_900"/>
                <ImageView android:id="@+id/imageBag"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_bag"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_bag"/>
                <ImageView android:id="@+id/imageMenu"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_24pxh"
                    android:layout_width="@dimen/_24pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_menu_blue_gray_900"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_menu_blue_gray_900"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnboyfriendtee"
            android:layout_height="0dp" android:layout_weight="1.0"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_27pxv" android:paddingTop="@dimen/_27pxv">
            <TextView android:ellipsize="end"
                android:id="@+id/txtBoyfriendTee"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{productVM.productModel.txtBoyfriendTee}"
                style="@style/txtPlayfairDisplayitalicregular40_1" tools:text="@string/lbl_boyfriend_tee"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerProduct"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                itemSpace="@{@dimen/_16pxh}" tools:itemCount="3" tools:listitem="@layout/row_product"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowgroup"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGroup"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_17pxh"
                    android:paddingStart="@dimen/_17pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:singleLine="true"
                    android:text="@{productVM.productModel.txtGroup}"
                    style="@style/txtSolidRoundedOutline" tools:text="@string/lbl_s"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGroupThree"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_13pxh"
                    android:paddingStart="@dimen/_13pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:singleLine="true"
                    android:text="@{productVM.productModel.txtGroupThree}"
                    style="@style/txtSolidRounded" tools:text="@string/lbl_m"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGroupFour"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_16pxh"
                    android:paddingStart="@dimen/_16pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:singleLine="true"
                    android:text="@{productVM.productModel.txtGroupFour}"
                    style="@style/txtSolidRoundedOutline" tools:text="@string/lbl_l"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGroupFive"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_8pxh"
                    android:paddingBottom="@dimen/_7pxv"
                    android:paddingEnd="@dimen/_8pxh"
                    android:paddingStart="@dimen/_8pxh"
                    android:paddingTop="@dimen/_7pxv"
                    android:singleLine="true"
                    android:text="@{productVM.productModel.txtGroupFive}"
                    style="@style/txtSolidRoundedOutline" tools:text="@string/lbl_xl"/>
                <FrameLayout android:id="@+id/frameGroup825"
                    android:layout_height="wrap_content" android:layout_width="wrap_content"/>
                <ImageView android:id="@+id/imageVolume"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_46pxh"
                    android:layout_width="@dimen/_33pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_volume_gray_800"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_volume_gray_800"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGroupEightySeven"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingBottom="@dimen/_13pxv"
                    android:paddingEnd="@dimen/_18pxh"
                    android:paddingStart="@dimen/_18pxh"
                    android:paddingTop="@dimen/_13pxv"
                    android:singleLine="true"
                    android:text="@{productVM.productModel.txtGroupEightySeven}"
                    style="@style/txtOutline" tools:text="@string/lbl_1"/>
                <ImageView android:id="@+id/imageFile"
                    android:layout_gravity="center_vertical"
                    android:layout_height="@dimen/_46pxh"
                    android:layout_width="@dimen/_33pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_file"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_file"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearColumnaddtocart"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_33pxv"
            android:paddingEnd="@dimen/_149pxh"
            android:paddingStart="@dimen/_149pxh"
            android:paddingTop="@dimen/_33pxv" style="@style/groupStyleblue_gray_900">
            <TextView android:ellipsize="end"
                android:id="@+id/txtAddtocart"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:singleLine="true"
                android:text="@{productVM.productModel.txtAddtocart}"
                style="@style/txtPlayfairDisplayromanbold22" tools:text="@string/lbl_add_to_cart"/>
            <ImageView android:id="@+id/imageTelevision"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_13pxh"
                android:layout_width="@dimen/_91pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_television"
                tools:ignore="ContentDescription" tools:src="@drawable/img_television"/>
        </LinearLayout>
    </LinearLayout>
</layout>
